# danaos_processing

./: .env.example  .gitignore  ANSWERS.md  FIXES_COMPLETE.md  PIPELINE_DESIGN.md  PIPELINE_DIAGRAM.md  PIPELINE_FLOW.md  PIPELINE_README.md  README.md  compare_viewer.py  convert_to_friendly.py  correction_manager.py  document_converter.py  document_pipeline.py  entity_classifier.py  entity_processor.py  judge_prompt.md  pipeline_config.py  process.py  pyproject.toml  requirements.txt  run_judge.py  run_pipeline.py  test_pipeline.py
diagram_output/: final_document.md
diagram_output/entities/: E001_EntityType.IMAGE_TEXT.md  E002_EntityType.TEXT.md  E003_EntityType.TEXT.md  E004_EntityType.TEXT.md  E006_EntityType.TEXT.md  E007_EntityType.DIAGRAM.mmd
docs/: README.md
docs/architecture/: PIPELINE_DESIGN.md  PIPELINE_DIAGRAM.md  PIPELINE_FLOW.md
docs/guides/: PIPELINE_README.md  QUICK_START.md
new_outputs/: corrections.yaml  final_document.md  final_document_friendly.html  final_document_judge.md  manifest.yaml
new_outputs/entities/: E001_EntityType.IMAGE_TEXT.md  E002_EntityType.TEXT.md  E003_EntityType.TEXT.md  E004_EntityType.TEXT.md  E005_EntityType.TEXT.md  E006_EntityType.TEXT.md  E007_EntityType.TEXT.md  (+85 more)
output/: final_document.md  manifest.yaml
p17_21/: final_document.md  manifest.yaml
p307_308/: corrections.yaml  final_document.md  final_document_friendly.html  manifest.yaml
p51/: manifest.yaml
p86_90/: final_document.md  final_document_friendly.html  manifest.yaml
table_output/: final_document.md  manifest.yaml
templates/: compare.html
(+196 files in other folders)
